--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_cache_manager: "^0.3.2"
+  flutter_cache_manager:
+    git:
+      url: git://github.com/wittech/flutter_cache_manager.git
 
 dev_dependencies:
   test: ^1.3.0
